test/qnumericError2.slq

def id[τ:*](x:τ)⇒x;

def main(){
	x:=id[ℕ](0); // error
}
